# tilelang-to-flydsl-skills

./: README.md
FlyTileKernels/: README.md  STATUS.md  pyproject.toml
FlyTileKernels/fly_tile_kernels/: __init__.py  _flydsl_helpers.py  _stub.py  config.py  utils.py
FlyTileKernels/fly_tile_kernels/engram/: engram_fused_weight_kernel.py  engram_gate_kernel.py  engram_grad_w_reduce_kernel.py  engram_hash_kernel.py
FlyTileKernels/fly_tile_kernels/mhc/: __init__.py  expand_kernel.py  head_compute_mix_kernel.py  multilayer_recompute_kernel.py  norm_fn_kernel.py  post_kernel.py  pre_apply_mix_kernel.py  pre_big_fuse_kernel.py  pre_split_mixes_kernel.py  sinkhorn_kernel.py
FlyTileKernels/fly_tile_kernels/moe/: aux_fi_kernel.py  common.py  expand_to_fused_kernel.py  get_fused_mapping_kernel.py  group_count_kernel.py  inplace_unique_group_indices_kernel.py  mask_indices_by_tp_kernel.py  normalize_weight_kernel.py  reduce_fused_kernel.py  scoring.py  top2_sum_gate_kernel.py  topk_gate_kernel.py  topk_sum_and_topk_group_idx_kernel.py
FlyTileKernels/fly_tile_kernels/quant/: cast_back_e5m6_kernel.py  cast_back_kernel.py  common.py  per_block_cast_kernel.py  per_block_cast_lossless_kernel.py  per_channel_cast_and_transpose_kernel.py  per_channel_cast_fused_kernel.py  per_channel_cast_kernel.py  per_token_cast_kernel.py  per_token_cast_to_e5m6_kernel.py  swiglu_backward_and_per_token_cast_kernel.py  swiglu_forward_and_per_channel_cast_and_transpose_kernel.py  swiglu_forward_and_per_token_cast_kernel.py
FlyTileKernels/memory/: MEMORY.md  flydsl_api_quirks.md  mhc_kernel_patterns.md  mhc_port_progress.md  pytest_flytilekernels_setup.md  tilekernels_port_context.md
FlyTileKernels/tests/: conftest.py  pytest_benchmark_plugin.py
FlyvLLM/: README.md  pyproject.toml
FlyvLLM/fly_vllm/: __init__.py  mhc.py  rocm_aiter_mla_sparse.py
FlyvLLM/memory/: MEMORY.md  flyvllm_port_context.md  flyvllm_test_strategy.md
FlyvLLM/tests/: conftest.py  test_dequantize_blocked_k_cache.py  test_fp8_mqa_logits.py  test_fp8_paged_mqa_logits.py  test_indexer_k_quant_and_cache.py  test_inv_rope.py  test_mhc_post.py  test_mhc_pre.py  test_rocm_aiter_mla_sparse_smoke.py  test_sparse_attn.py  test_sparse_flash_attention.py  test_topk_indices.py
(+81 files in other folders)
